[gd_scene load_steps=5 format=3 uid="uid://br3a3gfnjvxik"]

[ext_resource type="Script" path="res://Scenes/Objects/checkpoint.gd" id="1_1e7lr"]
[ext_resource type="Texture2D" uid="uid://6qig5vxam3fl" path="res://Sprite Assets/bullets/bulletredpink.png" id="2_8a176"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ieb60"]
radius = 4.12311

[sub_resource type="CircleShape2D" id="CircleShape2D_ue7yl"]
radius = 7.0

[node name="Checkpoint" type="RigidBody2D" groups=["checkpoint"]]
script = ExtResource("1_1e7lr")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_ieb60")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_8a176")

[node name="Timer" type="Timer" parent="."]

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_ue7yl")

[node name="DeathTimer" type="Timer" parent="."]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_death_timer_timeout"]
